--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -3,17 +3,20 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE='Europe/Rome'
 
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
+PHP_HOST_PORT=80
+MYSQL_HOST_PORT=3309
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_ENGINE=InnoDB
+DB_CHARSET=utf8
+DB_COLLATION=utf8_general_ci
+DB_DATABASE=database
+DB_USERNAME=root
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
