--- a/back-end/environments/prod/Dockerfile
+++ b/back-end/environments/prod/Dockerfile
@@ -26,6 +26,6 @@ RUN rm -rf .git .github .vscode database environments private tests \
 RUN chown -R www-data:www-data $APP_HOME
 
 # Start
-COPY environments/prod/start.sh /usr/local/bin/
+COPY /back-end/environments/prod/start.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/start.sh
 CMD ["start.sh"]
