--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -10,6 +10,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.4",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.5.10"
     },
@@ -34,7 +35,8 @@
     "prefer-stable": true,
     "scripts": {
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""            
+        ],
+        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --stop-on-violation --diff -- $(git diff --name-only --diff-filter=d HEAD)"
     }
 }
