--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -9,6 +9,7 @@
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
+        "captainhook/captainhook": "^5.10",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^3.4",
         "mockery/mockery": "^1.3.1",
@@ -37,6 +38,7 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""            
         ],
-        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --stop-on-violation --diff -- $(git diff --name-only --diff-filter=d HEAD)"
+        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --stop-on-violation --diff -- $(git diff --name-only --diff-filter=d HEAD)",
+        "post-autoload-dump": "vendor/bin/captainhook install -f -s"
     }
 }
