--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -38,7 +38,7 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""            
         ],
-        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --stop-on-violation --diff -- $(git diff --name-only --diff-filter=d HEAD)",
+        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --diff -- .",
         "post-autoload-dump": "vendor/bin/captainhook install -f -s"
     }
 }
