--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -13,7 +13,8 @@
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^3.4",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "vimeo/psalm": "^4.17"
     },
     "autoload": {
         "psr-4": {
