--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": ">=8.0",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
@@ -39,7 +39,6 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""            
         ],
-        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --diff -- .",
-        "post-autoload-dump": "vendor/bin/captainhook install -f -s"
+        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --diff -- ."
     }
 }
