--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "@types/jquery": "^3.5.11"
+    "@types/jquery": "^3.5.11",
+    "express": "^4.17.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
