--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -37,8 +41,9 @@
     "prefer-stable": true,
     "scripts": {
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""            
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --diff -- ."
+        "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --config .php-cs-fixer.dist.php --verbose --diff -- .",
+        "test": "./vendor/bin/phpunit --colors=always"
     }
 }
