:green_heart: Run github action only on master branch.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - deploy-backend-with-tests
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
